--- a/component/common/src/main/java/conf/configuration-tomcat.properties
+++ b/component/common/src/main/java/conf/configuration-tomcat.properties
@@ -68,3 +68,5 @@ gatein.email.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 # Global portlet.xml
 gatein.portlet.config=${gatein.conf.dir}/portlet.xml
 
+# key.txt file for gadget
+gatein.gadgets.keypath=${gatein.conf.dir}/gadgets/key.txt
